# verbos

./: .gitignore  LICENSE  README.md  example_config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  routes.py
