[project]
name = "verbos"
version = "0.0.1"
authors = [
  { name="Sarah McIntyre" },
]
description = "Game to practice conjugating verbs in Brazilian Portuguese."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/mci-s/verbos"